# axeman

./: .gitignore  00a_preprocess_Atlanta_Child_Murders_Map_Data.ipynb  README.md  environment.yml  geoenv.yml  geographic_profiling.py  geoprofiling.ipynb  pyproject.toml
.ipynb_checkpoints/: gdf_nodes-checkpoint.json  geographic_profiling-checkpoint.py  geoprofiling-checkpoint.ipynb  victims-checkpoint.csv
datasets/: Atlanta_Child_Murders.kml  atlanta_child_murders_data.csv
geo-env/conda-meta/: history
