[project]
name = "axeman"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Luc Rébillout", email = "rebillout.luc@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "geopandas>=0.14.4",
    "osmnx>=1.9.3",
    "networkx>=3.3",
    "matplotlib>=3.8.4",
    "ipykernel>=6.29.4",
    "haversine>=2.8.1",
    "descartes>=1.1.0",
    "folium>=0.16.0",
    "mapclassify>=2.6.1",
    "scikit-learn>=1.4.2",
    "scipy>=1.13.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
