[project]
authors = [{name = "LucRSquared", email = "rebillout.luc@gmail.com"}]
dependencies = []
name = "axeman"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
axeman = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=2.3.3,<3"
geopandas = ">=1.1.1,<2"
osmnx = ">=2.0.6,<3"
networkx = ">=3.5,<4"
haversine = ">=2.9.0,<3"
descartes = ">=1.1.0,<2"
folium = ">=0.20.0,<0.21"
mapclassify = ">=2.10.0,<3"
scikit-learn = ">=1.7.2,<2"
scipy = ">=1.16.2,<2"
ipykernel = ">=7.0.1,<8"
tqdm = ">=4.67.1,<5"
lxml = ">=6.0.2,<7"
